src/objects/XeroSync__c.object
<CustomObject>
    <description>Store information about last synchronization of xero entities.</description>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SyncDate__c</fullName>
        <label>Sync Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>XeroSettings__c</fullName>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Xero Syncs</relationshipLabel>
        <relationshipName>XeroSyncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Xero Sync</label>
    <nameField>
        <displayFormat>XS-{0000}</displayFormat>
        <label>Xero Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Syncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>